--- a/styles.css
+++ b/styles.css
@@ -1,104 +1,201 @@
-html{
+/* this document is intended for hands on experience to learn html-css // fatih asci */
+
+html {
     margin: 0;
     padding: 0;
-    width:100%;
-}
-header{
-    display: flex;
     width: 100%;
-    height: 60px;
-    top:0;
-    left:0;
-    position: fixed;  
-    align-items: center;
-   background-color: green;
-   color: #F9FAF8;
-   overflow:hidden;
-   border-bottom: 4px solid black;
-   z-index: 1;
-}    
-#logo{
-    height:40px; 
-    padding-left: 4%;
-}
-#navbar{
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    flex:1;
-    color:inherit;
-    padding-right: 4%;
-    gap:10px;
-}
-#hero{
-    position: absolute;
-    display: flex;
-    height: 300px;
-    width: 100%;
-    left:0;
-    top:64px;
-    right:0;
     margin:0;
-    padding:0;
-    
+}
+
+body {
+    width: 100%;
+    color: black;
+    margin: 0;
+}
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    height: 60px;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
     align-items: center;
     background-color: green;
-    overflow:hidden;
-    justify-content: space-evenly;
+    z-index: 1;
 }
-.one{
-    align-items:center
-    justify-content center;
+
+header a {
+    text-decoration: none;
+    font-style: normal;
+    color: #000;
+    font-size: 16px;
+}
+
+#logo {
+    height: 40px;
+    padding-left: 4%;
+}
+
+#navbar {
+    height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+    color: inherit;
+    padding-right: 4%;
+    gap: 10px;
+}
+
+
+main {
+    position: absolute;
+    display: block;
+    left: 0;
+    right: 0;
+    margin: 0;
+    align-items: flex-end;
+    justify-content: right;
+    top: 60px;
+    width: 100%;
+}
+
+#hero {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: right;
+    gap: 0px;
+    left: 0;
+    right: 0;
+    margin: 0;
+    padding: 50px;
+    background-color: whitesmoke;
+    border-bottom: 2px dashed black;
+}
+
+.one {
+    align-items: center;
+    justify-content: flex-end;
+    flex-grow: 2;
     display: flex;
     flex-direction: column;
-    flex:1;
-    padding-left: 25%;
-}
-.two{
-    height: max(150px);
-    padding-top: 2%;
-    padding-right: 25%;
-}
-.button{
-    border: 1px solid black;
 }
 
+.two {
+    flex-grow: 0;
+    margin: auto;
+}
 
-#socials{
-    width: 100%;
-    left:0;
-    position: absolute;
+.button-one {
     display: flex;
-    right:0;
-    margin:0;
-    padding:0;
-    top:364px;
-    background-color: blue;
-    height:250px;
+    flex-basis: 40px;
+    flex-grow: 1;
+    width: 150px;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    border-radius: 14px;
+    padding: 4px;
 }
 
-#quote{
-    width: 100%;
-    height:200px;
-    left:0;
-    position: absolute;
-    display: flex;
-    right:0;
-    margin:0;
-    padding:0;
-    top:614px;
-    background-color: #E5E7EB;
+.button-one a {
+    margin: auto;
+    padding: 10px;
+    color: white;
+    background-color: #000;
+    font-size: 20px;
+    text-decoration: none;
 }
 
-#action{
-    width: 100%;
-    left:0;
-    position: absolute;
+.button-two {
     display: flex;
-    right:0;
-    margin:0;
-    padding:0;
-    top:814px;
-    background-color: #E5E7EB;
+    flex-basis: 30px;
+    height: 40px;
+    flex-grow: 1;
+    max-width: 150px;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    border-radius: 14px;
+    padding: 4px;
+
+}
+
+.button-two a {
+    margin: 0;
+    padding: 10px;
+    color: white;
+    background-color: #000;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+#socials {
+    left: 0;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    right: 0;
+    margin: 0;
+    padding: 50px;
+    background-color: whitesmoke;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    border-bottom: 2px dashed black;
+}
+
+#socials a {
+    border: 2px solid black;
+    padding: 10px;
+    color: white;
+    background-color: #000;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+#quote {
+    left: 0;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    right: 0;
+    margin: 0;
+    padding: 50px;
+    background-color: whitesmoke;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    border-bottom: 2px dashed black;
+}
+
+#action {
+    left: 0;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    right: 0;
+    margin: 0;
+    padding: 50px;
+    background-color: whitesmoke;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #000;
+    font-size: 16px;
+    
 }
